--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/public/logoMate.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="path/to/tailwind.css" rel="stylesheet">
-    <title>Vite + React</title>
+    <title>Mate Libre</title>
   </head>
   <body>
     <div id="root"></div>
